--- a/main/yun/css/intro.css
+++ b/main/yun/css/intro.css
@@ -10,6 +10,7 @@ html, body{
 
 
 .next{
+  font-size: 1.5rem;
   width: 6vw;
   height: 6vh;
   position: absolute;
@@ -18,10 +19,15 @@ html, body{
 }
 
 .back{
+  font-size: 1.5rem;
   width: 6vw;
   height: 6vh;
   position: absolute;
   top: 60vh;
   left: 30vw;
+}
+
+p{
+  font-size: 1.3rem;
 }
   
